--- a/HTML/style.css
+++ b/HTML/style.css
@@ -2492,12 +2492,15 @@ figure.figure2.hover:after {
     height: 48px;
 }
 /* 9.3.9 Sidebar Selectdate*/
+
 .sidebar-selectdate{
     margin-bottom: 13px;
 }
+
 .sidebar-selectdate .dates{
     margin-top: 43px;
 }
+
 .sidebar-selectdate .date1{
     width: 47%;
     float: left;
@@ -3210,6 +3213,14 @@ figure.figure2.hover:after {
     /*END Navbar Collapse Edit*/
 }
 @media only screen and (min-width: 768px) {
+	/*Some features only for mobile*/
+	.non-mobile-hide {
+		display: none;
+	}
+
+    .collapse {
+        display: block!important;
+    }
     .container{
         padding: 0px;
     }
@@ -3225,12 +3236,30 @@ figure.figure2.hover:after {
 	position: absolute;
 }
 
+.width-80 {
+	width: 80%;
+}
+
 .pink-borderless {
     background-color: #f55692;
 }
 
+
 @media only screen and (max-width: 767px){
 	/*Lets say I think the picture at the top of the page should be hidden*/
+	.height-auto{
+		height:auto;
+	}
+	
+	.map{
+		max-height:200px;
+	}
+
+	.sidebar-selectdate .dates{
+		margin-top: 18px;
+		padding-bottom: 63px;
+	}
+
 	.mobile-hidden{
 		display:none;
 	}
@@ -3241,6 +3270,10 @@ figure.figure2.hover:after {
 
 	.bootstrap-select:not([class*=col-]):not([class*=form-control]):not(.input-group-btn){
 		width:100%;
+	}
+
+	.light-pink {
+		background-color: #FFE2FB;
 	}
 
 	.contents{
@@ -3331,12 +3364,14 @@ figure.figure2.hover:after {
         margin-left: 110px;
     }
     /*-------------*/
+	/*
     .sidebar-location {
         margin-bottom: 130px;
     }
     .sidebar-selectdate {
         margin-bottom: 130px;
     }
+	*/
     #grid-view {
 	    width: 100%;
 	}
